<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activityrelated.MainActivity">

    <Button
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:id="@+id/add_new_book"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="+"
        android:textColor="@color/black"
        android:textSize="10dp"
        android:textStyle="bold"
        android:textAlignment="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title1"
        android:text="@string/weeklyProg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:textColor="@color/coral"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/progressBlock"
    android:layout_below="@+id/title1"
    android:layout_marginTop="5dp"
    >


    <LinearLayout
        android:id="@+id/firstrow"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/reading"
            android:textSize="15sp"
            android:fontFamily="serif"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pagesRead"
            android:textSize="15sp"
            android:fontFamily="serif"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondrow"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/completed"
            android:textSize="15sp"
            android:fontFamily="serif"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/lastRead"
            android:textSize="15sp"
            android:fontFamily="serif"
            />
    </LinearLayout>

   </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title2"
        android:text="@string/currentlyRead"
        android:layout_below="@+id/progressBlock"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:textColor="@color/coral"
        />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title2"
        android:layout_marginTop="15dp"
        android:id="@+id/rec_view"
        >

    </android.support.v7.widget.RecyclerView>

</RelativeLayout>